feat: base hateoas, fixes en routes (auth)
